@@ -43,8 +43,8 @@ my $parms = {
         'HTTP::Server::Simple'      => 0.35,
         'HTTP::Server::Simple::CGI' => 0,
         'HTTP::Status'              => 0,
-        'LWP'                       => 5.819,
-        'LWP::UserAgent'            => 5.819,
+        'LWP'                       => 5.827,
+        'LWP::UserAgent'            => 5.827,
         'Pod::Usage'                => 0,
         'Test::More'                => 0.34,
         'Test::Warn'                => 0.11,
